actually use dependsOn correctly

--- a/src/prettier/devcontainer-feature.json
+++ b/src/prettier/devcontainer-feature.json
@@ -19,7 +19,7 @@
             "type": "string"
         }
     },
-    "installsAfter": [
-        "ghcr.io/devcontainers/features/node"
-    ]
+    "dependsOn": {
+        "ghcr.io/devcontainers/features/node": {}
+    }
 }
