--- a/src/typescript/devcontainer-feature.json
+++ b/src/typescript/devcontainer-feature.json
@@ -14,7 +14,7 @@
             "type": "string"
         }
     },
-    "installsAfter": [
-        "ghcr.io/devcontainers/features/node"
-    ]
+    "dependsOn": {
+        "ghcr.io/devcontainers/features/node": {}
+    }
 }
