--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -1,4 +1,4 @@
-name: Update main readme
+name: Update readme
 on:
   push:
     branches: "main"
@@ -13,7 +13,7 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 jobs:
-  update-main-readme:
+  update-readme:
     concurrency: ${{ github.ref }}-write
     permissions:
       contents: write
