--- a/.github/workflows/publish-features.yml
+++ b/.github/workflows/publish-features.yml
@@ -25,5 +25,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   update-readme:
+    needs: publish-features
+    permissions:
+      contents: write
     uses: ./.github/workflows/update-readme.yml
     secrets: inherit
