rename and update readme

--- a/src/devcontainers-cli/devcontainer-feature.json
+++ b/src/devcontainers-cli/devcontainer-feature.json
@@ -1,5 +1,5 @@
 {
-  "id": "devcontainer",
+  "id": "devcontainers-cli",
   "version": "1.0.0",
   "name": "Dev Containers CLI",
   "documentationURL": "http://github.com/devcontainers-community/npm-features/tree/main/src/devcontainer",
